<resources>
    <string name="app_name">Seeds Chat &amp; Learn</string>
    <string name="splash_text">Learning is for everyone</string>
    <string name="what_is_seeds">What is SEEDS?</string>
    <string name="GET_STARTED">GET STARTED</string>
    <string name="Already_User">ALREADY USER</string>
    <string name="lang_drop_down_text">Select language</string>
    <string name="username_register">Type a username</string>
    <string name="register_account">Create an account?</string>
    <string name="Register_btn">Register</string>
    <string name="Grade_register">Grade</string>
    <string name="select_language">Select language</string>
    <string name="select_age">Select age</string>
    <string name="Username">Username</string>
    <string name="Accountlogin">Account login</string>
    <string name="Login">Login</string>
    <string name="lets_go">LET\'S GO</string>
    <string name="skip">Skip</string>
    <string name="seeds_info">The corona pandemic has highlighted significant educational inequalities, where the shift to digital learning has left vulnerable groups, including people with migration or refugee backgrounds and non-native speakers, even further behind in terms of education. Limited access to digital technologies and a perceived closed education system will hinder their engagement in learning opportunities and societal participation. To address this issue, the SEEDS project proposes a combination of social and digital outreach, utilizing chatbots as a bridge between cultural mediators, social workers, and educational institutions. The project aims to create learning materials that can be accessed and tracked through a mobile device, via the chatbot system. The project promotes participatory action research and networked evaluation to identify appropriate contents and testing scenarios across Europe.
        Project funding: Erasmus+ Strategic Partnership
        Project duration: 2021-2023</string>
    <string name="login_existing_account">Already an User? Login here.</string>
    <string name="create_account">Create Account</string>
    <string name="Profile">Profile</string>
    <string name="Learning_progress">Learning Progress</string>
    <string name="Learning_cards">Learning Cards</string>
    <string name="Download_materials">Download Materials</string>
    <string name="Access_code">Access Code</string>
    <string name="Settings">Settings</string>
    <string name="Help">Help</string>
    <string name="Signout">Sign Out</string>
    <string name="Hello">Hello </string>
    <string name="close">Close</string>
    <string name="contact_team_text">You can contact our support team using the mail ID</string>
    <string name="Setting_Contact_us_dialog_title">Contact team</string>
    <string name="Dashboard_changelanguage">Interface language</string>
    <string name="Select_material_language">Select material language</string>
    <string name="Setting_changeMateriallanguage">Material Language</string>
    <string name="Grade">Grade</string>
    <string name="Done">Done</string>
    <string name="accessCode_Dialog_text">Enter access code</string>
    <string name="accessCodehere" translatable="false">Code here</string>
    <string name="age_drop_down_text">Your age</string>
    <string name="settings_powerd_by" translatable="false">Powered by SEEDS</string>
    <string name="learning_statistics">Learning Statistics</string>
    <string name="empty_statistics">No statistical data is available to show try completing some activities</string>
    <string name="press_back">Press back again to exit</string>
    <string name="material_language">Material Language</string>
    <string name="interface_language">Interface Language</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="feedback">Feedback</string>
    <string name="contact_us">Contact us</string>
    <string name="seeds_website">https://seeds.wineme.wiwi.uni-siegen.de/</string>
    <string name="no_exercises_completed_yet">No exercises completed yet</string>
    <string name="mainpage_History_heading">History</string>
    <string name="mainpage_Dashboard_heading">Dashboard</string>
    <string name="messageEdittext_hint">Type a message...</string>
    <string name="mcq_positive_feedback" translatable="false">Results</string>
    <string name="mcq_positive_congratulations">Congratulations</string>
    <string name="Choose_an_answer">Choose an answer</string>
    <string name="True">True</string>
    <string name="False">False</string>
    <string name="openEnded">Open Ended</string>
    <string name="Returntochat">Return to chat</string>
    <string name="Download">Download</string>
    <string name="no_downloads_available">No downloads available!!</string>
    <string name="True_false">True false</string>
    <string name="mcqfeedbacktitletext" translatable="false">Feedback</string>
    <string name="loremipsum" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="ok">Ok</string>
    <string name="Next">Next</string>
    <string name="mcq" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </string>
    <string name="Mcq_Activity" translatable="false">Mcq Activity</string>
    <string name="activity1_heading" translatable="false"> Match these statements to following answers.</string>
    <string name="activity1_instructions" translatable="false">"One of the models for intercultural competence (Bennett) can be applied as a simple checklist of four steps, trying to move away from ethnocentrism towards an understanding some of the ways in which other cultures are similar to and different from our own. We emphasize adapting behavior in response to differing cultural contexts and reconciling cultural differences in order to learn or create value from cross-cultural interactions. "</string>
    <string name="activity2_heading" translatable="false">Activity 2: What´s the comment about?</string>
    <string name="activity2_instructions" translatable="false">The adjustment to an unfamiliar situation or culture can be hard. There is some time of uncertainty and, in some cases, anxiety. We need to deal with ambiguity and new norms, ways to communicate/ behave. Some people go through similar phases during that time of adjustment. Can you connect these people´s comment to the description of the stage they´re at?</string>
    <string name="match_pic_heading" translatable="false">Match the above statements with the pictures</string>
    <string name="Setting_Feedback">Feedback</string>
    <string name="demo_time">9:00PM</string>
    <string name="demo_date">Monday</string>
    <string name="Notification">Notification</string>
    <string name="empty_rec_text">No notifications created yet\n\nClick on the + icon at the top right corner\nto create a new Notification</string>
    <string name="dark_mode">Dark Mode</string>
    <string-array name="Languages">
        <item>Deutsch</item>
        <item>Español</item>
        <item>Ελληνικά</item>
        <item>English</item>
    </string-array>
    <string name="German">German</string>
    <string name="Spanish">Spanish</string>
    <string name="English">English</string>
    <string name="Greek">Greek</string>
    <string name="flash_cards">Flash Cards</string>
    <string name="no_flash_cards">No activities are completed to display flash cards. Try completing some activities</string>
    <string name="notification">Notification</string>
    <string name="frequently_asked_questions">Frequently asked questions?</string>
    <string name="previous">Previous</string>
    <string name="e_learning">E-LEARNING</string>
    <string name="intro_page1">SEEDS is an E learning app which helps you to learn from your home and contents updated by the teachers regularly</string>
    <string name="chatbot">CHATBOT</string>
    <string name="intro_page2">You can chat with our inbuilt chatbot to get desired subjects and exercises</string>
    <string name="learning_statistics1">LEARNING STATISTICS</string>
    <string name="intro_page3">User statistics is available in the student dashboard which display the overall percentage of the subjects already completed by the student</string>
    <string name="introduction_video">Introduction video</string>
    <string name="intro_video">The Introduction video above displays a demo of functionality of the app</string>
    <string name="chat">Chat</string>
    <string name="erasmus_declaration">Funded by the European Union. Views and opinions expressed are however those of the author(s) only and do not necessarily reflect those of the European Union or the European Education and Culture Executive Agency (EACEA). Neither the European Union nor EACEA can be held responsible for them.</string>
    <string name="faq_question1">What is SEEDS?</string>
    <string name="faq_question2">Who is funding SEEDS project?</string>
    <string name="faq_question3">What is the project\'s website?</string>
    <string name="faq_question4">How can I contact the team?</string>
    <string name="faq_question5">Who are the project partners?</string>
    <string name="faq_question6">Is the project still running or finished?</string>
    <string name="faq_question7">Are the outcomes of the project openly accessible?</string>
    <string name="faq_question8">Where can I find the results of the project?</string>
    <string name="faq_answer1">SEEDS is a project that proposes a combination of social and digital outreach, utilizing chatbots as a bridge between cultural mediators, social workers, and educational institutions. The project aims to create an eco-system, where learning materials are created by educators through a web application, and then accessed and tracked by learners through a mobile device, via the chatbot system.</string>
    <string name="faq_answer2">SEEDS is funded by: Erasmus+ Strategic Partnership</string>
    <string name="faq_answer3">You can visit us on: https://seeds.wineme.wiwi.uni-siegen.de</string>
    <string name="faq_answer4">You can contact us using our email: seeds.members@listserv.dfn.de</string>
    <string name="faq_answer5">SEEDS is a collaboration among 4 partners: 1) University of Siegen, Institute of Knowledge Based Systems and Knowledge Management. 2)University of Siegen, Chair of Information Systems and New Media. 3) University of Alicante. 4) Open Lab Athens</string>
    <string name="faq_answer6">The project\'s duration is two years, between Mar. 2021- Feb. 202</string>
    <string name="faq_answer7">All SEEDS project results are open-access and available on the project\'s website and repositories.</string>
    <string name="faq_answer8">You can find the project\'s results and repository links on the project\'s website</string>
</resources>