<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Welcomepage.Seedsinfo"
    android:background="?attr/backgroundcolor">

    <ImageView
        android:id="@+id/Backbutton_faq"
        android:layout_width="61dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/back"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/textcolor" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Backbutton_faq">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/frequently_asked_questions"
                android:textColor="?attr/textcolor"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/question1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/faq_question1"
                android:textColor="?attr/textcolor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.154"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView" />

            <LinearLayout
                android:id="@+id/answer1Container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/question1"
                app:layout_constraintTop_toBottomOf="@id/question1">

                <TextView
                    android:id="@+id/answer1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:justificationMode="inter_word"
                    android:text="@string/faq_answer1"
                    android:textColor="?attr/textcolor" />
            </LinearLayout>

            <TextView
                android:id="@+id/question2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/faq_question2"
                android:textColor="?attr/textcolor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/answer1Container"
                app:layout_constraintTop_toBottomOf="@id/answer1Container" />

            <LinearLayout
                android:id="@+id/answer2Container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/question1"
                app:layout_constraintTop_toBottomOf="@id/question2">

                <TextView
                    android:id="@+id/answer2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="5dp"
                    android:justificationMode="inter_word"
                    android:text="@string/faq_answer2"
                    android:textColor="?attr/textcolor" />
            </LinearLayout>

            <TextView
                android:id="@+id/question3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/faq_question3"
                android:textColor="?attr/textcolor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/answer2Container"
                app:layout_constraintTop_toBottomOf="@id/answer2Container" />

            <LinearLayout
                android:id="@+id/answer3Container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/question1"
                app:layout_constraintTop_toBottomOf="@id/question3">

                <TextView
                    android:id="@+id/answer3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="5dp"
                    android:justificationMode="inter_word"
                    android:text="@string/faq_answer3"
                    android:textColor="?attr/textcolor" />
            </LinearLayout>

            <TextView
                android:id="@+id/question4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/faq_question4"
                android:textColor="?attr/textcolor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/answer3Container"
                app:layout_constraintTop_toBottomOf="@id/answer3Container" />

            <LinearLayout
                android:id="@+id/answer4Container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/question1"
                app:layout_constraintTop_toBottomOf="@id/question4">

                <TextView
                    android:id="@+id/answer4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/faq_answer4"
                    android:textColor="?attr/textcolor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/question1"
                    app:layout_constraintTop_toBottomOf="@id/question4" />
            </LinearLayout>

            <TextView
                android:id="@+id/question5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/faq_question5"
                android:textColor="?attr/textcolor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/answer4Container"
                app:layout_constraintTop_toBottomOf="@id/answer4Container" />

            <LinearLayout
                android:id="@+id/answer5Container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/question1"
                app:layout_constraintTop_toBottomOf="@id/question5">

                <TextView
                    android:id="@+id/answer5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:justificationMode="inter_word"
                    android:text="@string/faq_answer5"
                    android:textColor="?attr/textcolor" />
            </LinearLayout>


            <TextView
                android:id="@+id/question6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/faq_question6"
                android:textColor="?attr/textcolor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/answer5Container"
                app:layout_constraintTop_toBottomOf="@id/answer5Container" />

            <LinearLayout
                android:id="@+id/answer6Container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/question1"
                app:layout_constraintTop_toBottomOf="@id/question6">

                <TextView
                    android:id="@+id/answer6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="5dp"
                    android:justificationMode="inter_word"
                    android:text="@string/faq_answer6"
                    android:textColor="?attr/textcolor" />
            </LinearLayout>

            <TextView
                android:id="@+id/question7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/faq_question7"
                android:textColor="?attr/textcolor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/answer6Container"
                app:layout_constraintTop_toBottomOf="@id/answer6Container" />

            <LinearLayout
                android:id="@+id/answer7Container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/question1"
                app:layout_constraintTop_toBottomOf="@id/question7">

                <TextView
                    android:id="@+id/answer7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="5dp"
                    android:justificationMode="inter_word"
                    android:text="@string/faq_answer7"
                    android:textColor="?attr/textcolor" />
            </LinearLayout>

            <TextView
                android:id="@+id/question8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/faq_question8"
                android:textColor="?attr/textcolor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/answer7Container"
                app:layout_constraintTop_toBottomOf="@id/answer7Container" />

            <LinearLayout
                android:id="@+id/answer8Container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/question1"
                app:layout_constraintTop_toBottomOf="@id/question8">

                <TextView
                    android:id="@+id/answer8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="5dp"
                    android:justificationMode="inter_word"
                    android:text="@string/faq_answer8"
                    android:textColor="?attr/textcolor" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
