<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingRight="20dp"
    android:paddingLeft="20dp"
    android:paddingBottom="20dp"
    android:background="@drawable/custom_button_tab"
    android:layout_height="wrap_content">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Setting_Contact_us_dialog_title"
        android:textSize="20sp"
        android:padding="20dp"
        android:textStyle="bold"
        android:textColor="#FEFFFF"
        android:layout_marginTop="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:textSize="20sp"
       android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:text="@string/contact_team_text"
        android:textColor="#CCF9F9" />

    <TextView
        android:id="@+id/btn_contacteam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:text="Click here :"
        android:textColor="#CCF9F9"
        android:textSize="10sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textAlignment="center"
        android:autoLink="email"
        android:textColorLink="#006DFF"
        android:text="seeds.members@listserv.dfn.de"
        android:textColor="@color/white" />

</RelativeLayout>

    <Button
        android:id="@+id/close_contact_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/seed_dark_blue"
        android:textColor="@color/score_color" />




</LinearLayout>